# FlClash

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  README_zh_CN.md  analysis_options.yaml  distribute_options.yaml  pubspec.yaml  setup.dart
.claude/commands/: i18n.md
.github/workflows/: build.yaml
android/app/: build.gradle.kts  google-services.json  proguard-rules.pro
android/common/: build.gradle.kts
android/core/: build.gradle.kts
android/gradle/: libs.versions.toml
android/service/: build.gradle.kts
arb/: intl_en.arb  intl_ja.arb  intl_ru.arb  intl_zh_CN.arb
core/: action.go  common.go  constant.go  dial_pipe.go  dial_socket.go  go.mod  go.sum  hub.go  lib.go  server.go
lib/: application.dart  main.dart  state.dart
lib/common/: app_localizations.dart  cache.dart  color.dart  common.dart  constant.dart  context.dart  converter.dart  datetime.dart  dav_client.dart  file.dart  fixed.dart  function.dart  http.dart  indexing.dart  iterable.dart  javascript.dart  launch.dart  measure.dart  migration.dart  mixin.dart  navigation.dart  navigator.dart  num.dart  path.dart  permission.dart  picker.dart  pipe.dart  print.dart  protocol.dart  render.dart  request.dart  snowflake.dart  string.dart  system.dart  task.dart  theme.dart  tray.dart  utils.dart  window.dart
lib/core/: controller.dart  event.dart  interface.dart  lib.dart  service.dart  transport.dart
lib/database/: database.dart  groups.dart  icons.dart  links.dart  profiles.dart  rules.dart  (+1 more)
linux/: CMakeLists.txt
macos/: Podfile
plugins/rust_api/rust/: Cargo.toml
plugins/rust_api/rust/src/: frb_generated.rs
plugins/rust_api/rust/src/api/: ipc.rs  mod.rs
plugins/setup/linux/: CMakeLists.txt
plugins/wifi_ssid/windows/: CMakeLists.txt  wifi_ssid_plugin.cpp  wifi_ssid_plugin.h  wifi_ssid_plugin_c_api.cpp
plugins/wifi_ssid/windows/include/wifi_ssid/: wifi_ssid_plugin_c_api.h
test/: setup_test.dart
windows/: CMakeLists.txt
(+225 files in other folders)
